# cedar-agent-schemas

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md
.github/workflows/: ci.yml  release.yml
bindings/python/: README.md  pyproject.toml
bindings/python/cedar_agent_schemas/: __init__.py
bindings/rust/: Cargo.toml  README.md
bindings/rust/src/: lib.rs
bindings/typescript/: README.md  package.json
bindings/typescript/src/: index.ts
docs/: composition.md  owasp-mapping.md  prior-art.md  versioning.md
policies/: README.md  allow-read-workspace.cedar  deny-credential-exfiltration.cedar  deny-metadata-endpoints.cedar
schemas/: agent-actions.cedarschema.json
